2013-03-27  Werner Lemberg  <wl@gnu.org>

	Makefile (COMPILE): Add `CPPFLAGS'.

	Two reasons:

	  (a) for orthogonality with freetype.mk
	  (b) users can pass additional stuff to the compiler

2013-03-24  Werner Lemberg  <wl@gnu.org>

	[ftview] Improve rendering mode switching.

	* src/ftview.c (status): Add `update' field.
	(Process_Event): Set `update' to 1 only if we really have to do an
	update.
	(main): Updated.

2013-03-24  Werner Lemberg  <wl@gnu.org>

	[ftview] Use `l' and `k' keys instead of `L' and `K'.

	* src/ftview.c (event_help, Process_Event): Implement it.

2013-03-24  Werner Lemberg  <wl@gnu.org>

	Don't try to handle rendering precision.

	This is a non-functional remnant of FreeType 1.  All font drivers
	using B/W rendering activate this at ppem < 24.

	* src/ftcommon.h (FTDemo_Handle): Remove `low_prec' field.
	* src/ftcommon.c (FTDemo_New): Updated.
	* src/ftmulti.c (low_prec): Removed.
	(Help, Process_Event): Updated.
	* src/ftstring.c (event_help, Process_Event): Updated.
	* src/ftview.c (event_help, Process_Event, write_header): Updated.

2013-03-17  Werner Lemberg  <wl@gnu.org>

	[ftview] Remove options -d and -L.

	Not documented and no longer working.  This functionality is now
	available via FreeType's FT2_DEBUG environment variable.

	* src/ftview.c (status): Remove `debug' and `trace_level'.
	(parse_cmdline, main): Updated.

2013-03-17  Werner Lemberg  <wl@gnu.org>

	[ftview] Remove option -D.

	This no longer works because the used cache values are now internal.

	* src/ftview.c (status): Remove `dump_cache_stats'.
	(usage, parse_cmdline, main): Updated.

2013-02-16  Alexei Podtelezhnikov  <apodtele@gmail.com>

        [ftbench] Make BBox test harder.

	Rotating an outline puts more off-points outside of its bounding box.

	* src/ftbench.c: Include FT_OUTLINE_H.
	(test_get_bbox): Rotate outline by 30 degrees.

2013-02-12  Werner Lemberg  <wl@gnu.org>

	[ftbench] Add test for `FT_Outline_Get_BBox'.

	* src/ftbench.c: Include FT_BBOX_H.